:white_check_mark: Write tests